# kiro-control-center

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  opencode.json  tools-spec.json
.agents-view/: design-6g6r.md  design-slice-1.md  design-slice-2.md  plan-slice-1.md  plan-slice-2.md  raw-request.md  related-issues.md  review-decisions-s13.md  spec.md
.agents-view/probe/: README.md  compare.py  oracle.ps1  oracle_fixture.json  oracle_real.json  probe.py  probe_fixture.json  probe_real.json
.agents-view/probe-s13/: README.md  oracle.out  oracle.ps1  probe.mjs  probe.out
.agents-view/probe-s2/: README.md  oracle.mjs  oracle.out  probe.py
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.claude/: settings.json
.claude/agents/: marketplace-security-reviewer.md  tauri-ipc-auditor.md
.claude/commands/: adversarial-tests.md  audit-deps.md
.claude/hooks/: block-cargo-lock.sh  clippy.sh  rustfmt.sh
.claude/skills/assertion-quality/: SKILL.md
.claude/skills/cargo-audit/: SKILL.md
.claude/skills/cargo-check/: SKILL.md
.claude/skills/rust-best-practices/: SKILL.md  cli-development.md  common-footguns.md  error-handling.md  file-io.md  fundamentals.md  performance.md  planning-checklist.md  type-safety.md
.github/scripts/: post-review-comments.py  test_post_review_comments.py
.github/workflows/: ci.yml  claude-code-review.yml  kiro-review.yml  release.yml
.kiro-2cu2/: design.md  findings.md  oracle.mjs  plan.md  probe.py  related-issues.md
.kiro-tdwg/: design.md  findings.md  oracle.mjs  plan.md  probe.py  related-issues.md
.kiro/agents/: code-reviewer.json  code-simplifier.json  comment-analyzer.json  kcc-agent.json  pr-test-analyzer.json  review-orchestrator.json  silent-failure-hunter.json  type-design-analyzer.json
.kiro/agents/prompts/: review-orchestrator.md
.kiro/settings/: lsp.json
.prove-it/list-plugin-catalog/: oracle.md  related-issues.md  what-i-learned.md
.rivets/: config.yaml  issues.jsonl
changelog.d/: kiro-2cu2.added.md  kiro-dply.fixed.md  kiro-npkz.fixed.md  kiro-tdwg.fixed.md
crates/kiro-control-center/: package-lock.json  package.json  playwright.config.ts  vite.config.js
crates/kiro-control-center/src/: app.css  app.html
crates/kiro-control-center/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/kiro-control-center/src-tauri/src/: error.rs  lib.rs  main.rs
crates/kiro-control-center/src-tauri/src/commands/: agents.rs  agents_authoring.rs  browse.rs  installed.rs  kiro_settings.rs  marketplaces.rs  mod.rs  plugins.rs  settings.rs  steering.rs
crates/kiro-control-center/src-tauri/tests/: manifest_smoke.rs
crates/kiro-market/: Cargo.toml
crates/kiro-market-core/: Cargo.toml
crates/kiro-market-core/schemas/: agent-spec.json
crates/kiro-market-core/src/: cache.rs  error.rs  file_lock.rs  git.rs  hash.rs  kiro_settings.rs  lib.rs  marketplace.rs  platform.rs  plugin.rs  project.rs  raii.rs  service.rs  skill.rs  test_utils.rs  user_agent.rs  validation.rs
crates/kiro-market-core/src/agent/: discover.rs  emit.rs  frontmatter.rs  mod.rs  parse.rs  parse_claude.rs  parse_copilot.rs  parse_native.rs  tools.rs  types.rs
crates/kiro-market-core/src/service/: browse.rs  mod.rs  test_support.rs
crates/kiro-market-core/src/steering/: discover.rs  mod.rs  types.rs
crates/kiro-market-core/tests/: integration_native_install.rs  oracle_probe_vs_list_user_agents.rs  prove_it_list_plugin_catalog.rs
crates/kiro-market/src/: cli.rs  main.rs
crates/kiro-market/src/commands/: cache.rs  common.rs  info.rs  install.rs  list.rs  marketplace.rs  mod.rs  remove.rs  search.rs  update.rs
crates/kiro-market/tests/: cli_tests.rs
crates/kiro-market/tests/common/: fixtures.rs  mod.rs
docs/: code-review-2026-04-02-copilot.md  code-review-2026-04-02.md  code-review-6-agent-2026-04-02.md  code-review-kiro-cli.md  code-review.md  plan-review-checklist.md  review-gix-migration.md
docs/plans/: 2026-04-02-kiro-control-center-design.md  2026-04-02-kiro-control-center-plan.md  2026-04-02-kiro-market-design.md  2026-04-02-kiro-market-plan.md  2026-04-03-test-coverage-design.md  2026-04-04-project-discovery-design.md  2026-04-04-project-discovery-plan.md  2026-04-04-service-layer-plan.md  2026-04-04-test-coverage-plan.md  2026-04-06-skill-card-description-design.md  2026-04-06-skill-card-description-plan.md  2026-04-06-tracking-file-locking-design.md  2026-04-06-tracking-file-locking-plan.md  2026-04-11-kiro-settings-view-design.md  2026-04-11-kiro-settings-view-plan.md  2026-04-14-plugin-discovery-design.md  2026-04-14-plugin-discovery-plan.md  2026-04-16-agent-import-plan.md  2026-04-19-deferred-audit-followups.md  2026-04-23-kiro-cli-native-plugin-import-design.md  2026-04-23-plan-review-findings.md  2026-04-23-stage1-content-hash-primitive-plan.md  2026-04-23-stage2-native-kiro-cli-agent-import-plan.md  2026-04-23-stage3-steering-import-plan.md  2026-04-24-stage2-3-plan-amendments.md  2026-04-29-plugin-first-install-design.md  2026-04-29-plugin-first-install-plan-amendments.md  2026-04-29-plugin-first-install-plan.md  2026-04-30-phase-1-5-session-start.md  2026-04-30-phase-1-5-type-safety-design.md  2026-04-30-phase-1-5-type-safety-plan-amendments.md  2026-04-30-phase-1-5-type-safety-plan.md  2026-04-30-phase-2a-update-detection-design.md  2026-05-01-phase-2a-update-detection-plan-amendments.md  2026-05-01-phase-2a-update-detection-plan.md  2026-05-03-install-detect-symmetry-design.md  2026-05-03-install-detect-symmetry-plan.md  2026-05-05-phase-2b-followup-tasks.md  2026-05-05-phase-2b-update-detection-ui-design.md  2026-05-05-phase-2b-update-detection-ui-plan.md  (+7 more)
docs/reviews/: 2026-05-14-list-plugin-catalog-review.md  2026-05-15-second-pass-decisions.md
prototypes/dotnet-test-crew/: DEMO-RUNBOOK.md  README.md  crew-dag-loop.json  crew-dag.json  setup-test-project.sh
xtask/: Cargo.toml
xtask/src/: comment_lint.rs  main.rs  plan_lint.rs
(+89 files in other folders)
