[workspace]
resolver = "2"
members = [
    "crates/kiro-market-core",
    "crates/kiro-market",
    "crates/kiro-control-center/src-tauri",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/dwalleck/kiro-marketplace-cli"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = { version = "0.8", default-features = false, features = ["parse"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Git
gix = { version = "0.81", default-features = true, features = ["blocking-network-client", "blocking-http-transport-curl"] }
# Feature-unification activator. kiro-market-core takes this entry as a
# direct dep (`curl = { workspace = true }`) so Cargo flows the `ssl`
# feature onto the transitive `curl-sys` pulled by gix-transport.
#
# IMPORTANT: a `[workspace.dependencies]` entry alone does NOTHING — it
# has to be activated by at least one workspace member or the features
# never propagate. Without that activation, curl-sys builds with no TLS
# backend and HTTPS clones can silently fall back to plaintext on builds
# with static libcurl (Windows minimal, vendored CI). The CI job
# `assert-curl-tls` greps the resolved feature tree for `curl-sys feature
# "ssl"` so this regression cannot return unnoticed. If `gix-transport`
# is upgraded and the feature flow changes, this entry may need to depend
# on `curl-sys` directly instead.
curl = { version = "0.4", features = ["ssl"] }

# Console
colored = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File paths
dirs = "6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1.5"
hex = "0.4"

# Platform
junction = "1"

# File locking
fs4 = "0.13"

# Testing
rstest = "0.26"
tempfile = "3"

# Internal
kiro-market-core = { version = "0.1.0", path = "crates/kiro-market-core" }
