[package]
name = "kiro-market-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for kiro-market: Claude Code marketplace skill installer for Kiro CLI"

[lints]
workspace = true

[features]
default = []
cli = ["clap"]
specta = ["dep:specta"]
test-support = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
gix = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
fs4 = { workspace = true }
clap = { workspace = true, optional = true }
specta = { version = "2.0.0-rc.24", optional = true, features = ["derive", "serde_json"] }

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
