[package]
name = "kiro-market-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for kiro-market: Claude Code marketplace skill installer for Kiro CLI"

[lints]
workspace = true

[features]
default = []
cli = ["clap"]
specta = ["dep:specta"]
test-support = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
gix = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
fs4 = { workspace = true }
clap = { workspace = true, optional = true }
specta = { version = "2.0.0-rc.24", optional = true, features = ["derive", "serde_json"] }
# Feature-unification activator: the workspace declares
# `curl = { features = ["ssl"] }`, but a `[workspace.dependencies]` entry
# is inert until at least one workspace member takes it as an actual
# dependency. Without this line, `cargo metadata` shows curl-sys with NO
# features, and the only reason HTTPS clones work today is that system
# libcurl happens to ship with TLS — a static-libcurl build (Windows
# minimal, vendored CI) would silently fall back to plaintext. CI asserts
# the resolved feature list contains `ssl` so this regression cannot
# return unnoticed.
curl = { workspace = true }
# Runtime dep: production install paths use tempfile::TempDir for staging
# directories so the OS-cleanup-on-Drop semantic replaces hand-rolled
# unique-name generation + leftover-orphan sweeping.
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
# Self-cycle dev-dep activates the `test-support` feature for unit AND
# integration tests in this crate. Cargo handles the self-reference for
# dev-deps (no transitive recursion). Without this, integration tests in
# `tests/` cannot reach the `service::test_support` module (it's gated on
# `cfg(any(test, feature = "test-support"))`, and external test compilation
# units don't get `cfg(test)` for their dependencies). Pattern documented
# at https://github.com/rust-lang/cargo/issues/2911.
kiro-market-core = { path = ".", features = ["test-support"] }
