[package]
name = "kiro-control-center"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Kiro Control Center — GUI for managing Claude Code marketplace skills"

[lints]
workspace = true

[[bin]]
name = "kcc"
path = "src/main.rs"

[lib]
name = "kcc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }

[dependencies]
kiro-market-core = { path = "../../kiro-market-core", features = ["specta"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
specta = { version = "2.0.0-rc.20" }
specta-typescript = "0.0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
